infra/local/local_spark/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  labels:
    app: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      serviceAccountName: spark-sa
      nodeSelector:
        kubernetes.io/hostname: desktop-worker
      containers:
      - name: spark-master
        image: gregogs/spark:custom-with-jdbc
        ports:
        - containerPort: 7077
        - containerPort: 8080
        args:
        - /opt/spark/bin/spark-class
        - org.apache.spark.deploy.master.Master
