infra/local/local_spark/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  labels:
    app: spark-worker
spec:
  replicas: 4
  selector:
    matchLabels:
      app: spark-worker
  template:
    metadata:
      labels:
        app: spark-worker
    spec:
      serviceAccountName: spark-sa
      nodeSelector:
        kubernetes.io/hostname: desktop-worker
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - spark-worker
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: spark-worker
        image: gregogs/spark:custom-with-jdbc
        ports:
        - containerPort: 8081
        args:
        - /opt/spark/bin/spark-class
        - org.apache.spark.deploy.worker.Worker
        - spark://spark-master:7077
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
