infra/local/local_spark/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master
spec:
  selector:
    app: spark-master
  type: NodePort
  ports:
  - name: spark
    port: 7077
    targetPort: 7077
  - name: webui
    port: 8080
    targetPort: 8080
